parser/src/CedilleParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.7 from CedilleParser.y
-----------------------------------------------------------------------------

state 84 contains 1 shift/reduce conflicts.
state 89 contains 1 shift/reduce conflicts.
state 201 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_cedilleParser -> File                       (0)
	%start_typee -> Type                               (1)
	%start_terme -> Term                               (2)
	%start_kinde -> Kind                               (3)
	%start_deftermtype -> Def                          (4)
	File -> Imports 'module' Qvar MParams '.' Cmds LineNo   (5)
	Imprt -> 'import' OptPublic Fpth OptAs MArgs '.'   (6)
	OptAs ->                                           (7)
	OptAs -> 'as' var                                  (8)
	OptPublic ->                                       (9)
	OptPublic -> 'public'                              (10)
	Imports ->                                         (11)
	Imports -> Imprt Imports                           (12)
	Cmds ->                                            (13)
	Cmds -> Cmd Cmds                                   (14)
	OptOpaque ->                                       (15)
	OptOpaque -> 'opaque'                              (16)
	Cmd -> Imprt                                       (17)
	Cmd -> OptOpaque Def '.'                           (18)
	Cmd -> DefDatatype '.'                             (19)
	Cmd -> kvar KParams '=' Kind '.'                   (20)
	MaybeCheckType ->                                  (21)
	MaybeCheckType -> '◂' Type                         (22)
	MaybeCheckType -> ':' Type                         (23)
	MParams ->                                         (24)
	MParams -> MDecl MParams                           (25)
	KParams ->                                         (26)
	KParams -> KDecl KParams                           (27)
	DefDatatype -> 'data' OneDatatype OptMutualDefDatatype   (28)
	OptMutualDefDatatype ->                            (29)
	OptMutualDefDatatype -> '&' OneDatatype OptMutualDefDatatype   (30)
	OneDatatype -> var MParams ':' Kind '=' OptPipe Ctrs   (31)
	Ctr -> var ':' Type                                (32)
	Ctrs ->                                            (33)
	Ctrs -> Ctr '|' Ctrs                               (34)
	Ctrs -> Ctr                                        (35)
	Def -> Bvar MaybeCheckType '=' Term                (36)
	Def -> Bvar '◂' Kind '=' Type                      (37)
	Def -> Bvar ':' Kind '=' Type                      (38)
	MDecl -> '(' Bvar ':' Kind ')'                     (39)
	MDecl -> '(' Bvar ':' Type ')'                     (40)
	MDecl -> '{' Bvar ':' Type '}'                     (41)
	KDecl -> '(' Bvar ':' TpKd ')'                     (42)
	Lam -> 'Λ'                                         (43)
	Lam -> 'λ'                                         (44)
	Theta -> 'θ'                                       (45)
	Theta -> 'θ+'                                      (46)
	Theta -> 'θ<' Vars '>'                             (47)
	Vars -> Qvar                                       (48)
	Vars -> Qvar Vars                                  (49)
	OptPlus ->                                         (50)
	OptPlus -> '+'                                     (51)
	OptNums ->                                         (52)
	OptNums -> '<' Nums '>'                            (53)
	OptGuide ->                                        (54)
	OptGuide -> '@' Bvar '.' Type                      (55)
	OptType -> Atype                                   (56)
	OptType ->                                         (57)
	OptClass ->                                        (58)
	OptClass -> ':' TpKd                               (59)
	Nums -> Num                                        (60)
	Nums -> Num Nums                                   (61)
	OptTerm ->                                         (62)
	OptTerm -> '{' Term '}'                            (63)
	OptTermAngle ->                                    (64)
	OptTermAngle -> '<' Term '>'                       (65)
	MaybeTermAngle ->                                  (66)
	MaybeTermAngle -> '<' Term '>'                     (67)
	MArg -> Lterm                                      (68)
	MArg -> '-' Lterm                                  (69)
	MArg -> '·' Atype                                  (70)
	MArgs ->                                           (71)
	MArgs -> MArg MArgs                                (72)
	KArg -> Lterm                                      (73)
	KArg -> '·' Atype                                  (74)
	KArgs ->                                           (75)
	KArgs -> KArg KArgs                                (76)
	TpKd -> Type                                       (77)
	TpKd -> Kind                                       (78)
	Bvar -> '_'                                        (79)
	Bvar -> var                                        (80)
	Qvar -> var                                        (81)
	Qvar -> qvar                                       (82)
	Fpth -> fpth                                       (83)
	Fpth -> Qvar                                       (84)
	Num -> num                                         (85)
	LineNo ->                                          (86)
	Term -> Lam Bvar OptClass '.' Term                 (87)
	Term -> '[' Def ']' '-' Term                       (88)
	Term -> '{' Def '}' '-' Term                       (89)
	Term -> 'open' Qvar '-' Term                       (90)
	Term -> 'close' Qvar '-' Term                      (91)
	Term -> 'ρ' OptPlus OptNums Lterm OptGuide '-' Term   (92)
	Term -> 'φ' Lterm '-' Term '{' Term '}'            (93)
	Term -> 'χ' OptType '-' Term                       (94)
	Term -> 'δ' OptType '-' Term                       (95)
	Term -> Theta Lterm Lterms                         (96)
	Term -> Aterm                                      (97)
	OptPipe ->                                         (98)
	OptPipe -> '|'                                     (99)
	Cases ->                                           (100)
	Cases -> '|' Qvar CaseArgs '➔' Term Cases          (101)
	CasesAux -> Qvar CaseArgs '➔' Term Cases           (102)
	CasesAux -> Cases                                  (103)
	CaseArgs ->                                        (104)
	CaseArgs -> Bvar CaseArgs                          (105)
	CaseArgs -> '-' Bvar CaseArgs                      (106)
	CaseArgs -> '·' Bvar CaseArgs                      (107)
	Motive ->                                          (108)
	Motive -> '@' Type                                 (109)
	Aterm -> Aterm Lterm                               (110)
	Aterm -> Aterm '-' Lterm                           (111)
	Aterm -> Aterm '·' Atype                           (112)
	Aterm -> Lterm                                     (113)
	Lterm -> 'β' OptTermAngle OptTerm                  (114)
	Lterm -> 'ε' Lterm                                 (115)
	Lterm -> 'ε-' Lterm                                (116)
	Lterm -> 'εl' Lterm                                (117)
	Lterm -> 'εl-' Lterm                               (118)
	Lterm -> 'εr' Lterm                                (119)
	Lterm -> 'εr-' Lterm                               (120)
	Lterm -> 'ς' Lterm                                 (121)
	Lterm -> Pterm                                     (122)
	Pterm -> Qvar                                      (123)
	Pterm -> '(' Term ')'                              (124)
	Pterm -> Pterm '.num'                              (125)
	Pterm -> '[' Term ',' Term OptGuide ']'            (126)
	Pterm -> 'μ' OneMu OptMoreMu                       (127)
	Pterm -> 'μP' MaybeTermAngle Term Motive '{' CasesAux '}'   (128)
	Pterm -> '●'                                       (129)
	OneMu -> Bvar '.' Term Motive '{' CasesAux '}'     (130)
	OptMoreMu ->                                       (131)
	OptMoreMu -> '&' OneMu OptMoreMu                   (132)
	Lterms ->                                          (133)
	Lterms -> Lterm Lterms                             (134)
	Lterms -> '-' Lterm Lterms                         (135)
	Type -> 'Π' Bvar ':' TpKd '.' Type                 (136)
	Type -> '∀' Bvar ':' TpKd '.' Type                 (137)
	Type -> 'λ' Bvar ':' TpKd '.' Type                 (138)
	Type -> 'ι' Bvar ':' Type '.' Type                 (139)
	Type -> LType '➾' Type                             (140)
	Type -> LType '➔' Type                             (141)
	Type -> LType                                      (142)
	Type -> '{^' Type '^}'                             (143)
	Type -> '[' Def ']' '-' Type                       (144)
	LType -> LType '·' Atype                           (145)
	LType -> LType Lterm                               (146)
	LType -> Atype                                     (147)
	Atype -> '(' Type ')'                              (148)
	Atype -> Qvar                                      (149)
	Atype -> '●'                                       (150)
	Atype -> '{' Term '≃' Term '}'                     (151)
	Kind -> 'Π' Bvar ':' TpKd '.' Kind                 (152)
	Kind -> LKind '➔' Kind                             (153)
	Kind -> LType '➔' Kind                             (154)
	Kind -> LKind                                      (155)
	LKind -> '★'                                       (156)
	LKind -> '(' Kind ')'                              (157)
	LKind -> qkvar KArgs                               (158)
	LKind -> kvar KArgs                                (159)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	var            { Token _ (TVar _) }
	qvar           { Token _ (TQvar _) }
	kvar           { Token _ (TKvar _) }
	qkvar          { Token _ (TQKvar _) }
	fpth           { Token _ (TFpth _) }
	num            { Token _ (TNum _) }
	'.num'         { Token _ (TProj _) }
	'ε'            { Token $$ TEps }
	'ε-'           { Token $$ TEpsM }
	'εl'           { Token $$ TEpsL }
	'εl-'          { Token $$ TEpsLM }
	'εr'           { Token $$ TEpsR }
	'εr-'          { Token $$ TEpsRM }
	'import'       { Token $$ TImport }
	'module'       { Token $$ TModule }
	'as'           { Token $$ TAs }
	'data'         { Token $$ TData }
	'public'       { Token $$ TPublic }
	'opaque'       { Token $$ TOpaque }
	'open'         { Token $$ TOpen }
	'close'        { Token $$ TClose }
	'{^'           { Token $$ TLSpan }
	'^}'           { Token $$ TRSpan }
	'θ'            { Token $$ TTheta }
	'θ+'           { Token $$ TThetaEq }
	'θ<'           { Token $$ TThetaVars }
	'ρ'            { Token $$ TRho }
	'δ'            { Token $$ (TSym "δ") }
	'='            { Token $$ (TSym "=") }
	'<'            { Token $$ (TSym "<") }
	'>'            { Token $$ (TSym ">") }
	'+'            { Token $$ (TSym "+") }
	'_'            { Token _  (TSym "_") }
	'.'            { Token $$ (TSym ".") }
	'('            { Token $$ (TSym "(") }
	')'            { Token $$ (TSym ")") }
	'['            { Token $$ (TSym "[") }
	']'            { Token $$ (TSym "]") }
	','            { Token $$ (TSym ",") }
	'{'            { Token $$ (TSym "{") }
	'}'            { Token $$ (TSym "}") }
	':'            { Token $$ (TSym ":") }
	'Π'            { Token $$ (TSym "Π") }
	'∀'            { Token $$ (TSym "∀") }
	'λ'            { Token $$ (TSym "λ") }
	'Λ'            { Token $$ (TSym "Λ") }
	'ι'            { Token $$ (TSym "ι") }
	'β'            { Token $$ (TSym "β") }
	'·'            { Token $$ (TSym "·") }
	'-'            { Token $$ (TSym "-") }
	'ς'            { Token $$ (TSym "ς") }
	'χ'            { Token $$ (TSym "χ") }
	'φ'            { Token $$ (TSym "φ") }
	'➾'            { Token $$ (TSym "➾") }
	'➔'            { Token $$ (TSym "➔") }
	'≃'            { Token $$ (TSym "≃") }
	'◂'            { Token $$ (TSym "◂") }
	'@'            { Token $$ (TSym "@") }
	'●'            { Token $$ (TSym "●") }
	'★'            { Token $$ (TSym "★") }
	'μ'            { Token $$ TMu }
	'μP'           { Token $$ TMuP }
	'|'            { Token $$ TPipe }
	'&'            { Token $$ TAnd }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_cedilleParser rule  0
	%start_typee    rule  1
	%start_terme    rule  2
	%start_kinde    rule  3
	%start_deftermtype rule  4
	File            rule  5
	Imprt           rule  6
	OptAs           rules 7, 8
	OptPublic       rules 9, 10
	Imports         rules 11, 12
	Cmds            rules 13, 14
	OptOpaque       rules 15, 16
	Cmd             rules 17, 18, 19, 20
	MaybeCheckType  rules 21, 22, 23
	MParams         rules 24, 25
	KParams         rules 26, 27
	DefDatatype     rule  28
	OptMutualDefDatatype rules 29, 30
	OneDatatype     rule  31
	Ctr             rule  32
	Ctrs            rules 33, 34, 35
	Def             rules 36, 37, 38
	MDecl           rules 39, 40, 41
	KDecl           rule  42
	Lam             rules 43, 44
	Theta           rules 45, 46, 47
	Vars            rules 48, 49
	OptPlus         rules 50, 51
	OptNums         rules 52, 53
	OptGuide        rules 54, 55
	OptType         rules 56, 57
	OptClass        rules 58, 59
	Nums            rules 60, 61
	OptTerm         rules 62, 63
	OptTermAngle    rules 64, 65
	MaybeTermAngle  rules 66, 67
	MArg            rules 68, 69, 70
	MArgs           rules 71, 72
	KArg            rules 73, 74
	KArgs           rules 75, 76
	TpKd            rules 77, 78
	Bvar            rules 79, 80
	Qvar            rules 81, 82
	Fpth            rules 83, 84
	Num             rule  85
	LineNo          rule  86
	Term            rules 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97
	OptPipe         rules 98, 99
	Cases           rules 100, 101
	CasesAux        rules 102, 103
	CaseArgs        rules 104, 105, 106, 107
	Motive          rules 108, 109
	Aterm           rules 110, 111, 112, 113
	Lterm           rules 114, 115, 116, 117, 118, 119, 120, 121, 122
	Pterm           rules 123, 124, 125, 126, 127, 128, 129
	OneMu           rule  130
	OptMoreMu       rules 131, 132
	Lterms          rules 133, 134, 135
	Type            rules 136, 137, 138, 139, 140, 141, 142, 143, 144
	LType           rules 145, 146, 147
	Atype           rules 148, 149, 150, 151
	Kind            rules 152, 153, 154, 155
	LKind           rules 156, 157, 158, 159

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'import'       shift, and enter state 8
	'module'       reduce using rule 11

	File           goto state 68
	Imprt          goto state 6
	Imports        goto state 7

State 1


	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'{^'           shift, and enter state 61
	'('            shift, and enter state 62
	'['            shift, and enter state 63
	'{'            shift, and enter state 23
	'Π'            shift, and enter state 64
	'∀'            shift, and enter state 65
	'λ'            shift, and enter state 66
	'ι'            shift, and enter state 67
	'●'            shift, and enter state 25

	Qvar           goto state 13
	Type           goto state 59
	LType          goto state 60
	Atype          goto state 15

State 2


	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'open'         shift, and enter state 40
	'close'        shift, and enter state 41
	'θ'            shift, and enter state 42
	'θ+'           shift, and enter state 43
	'θ<'           shift, and enter state 44
	'ρ'            shift, and enter state 45
	'δ'            shift, and enter state 46
	'('            shift, and enter state 47
	'['            shift, and enter state 48
	'{'            shift, and enter state 49
	'λ'            shift, and enter state 50
	'Λ'            shift, and enter state 51
	'β'            shift, and enter state 52
	'ς'            shift, and enter state 53
	'χ'            shift, and enter state 54
	'φ'            shift, and enter state 55
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58

	Lam            goto state 27
	Theta          goto state 28
	Qvar           goto state 29
	Term           goto state 30
	Aterm          goto state 31
	Lterm          goto state 32
	Pterm          goto state 33

State 3


	var            shift, and enter state 18
	qvar           shift, and enter state 19
	kvar           shift, and enter state 20
	qkvar          shift, and enter state 21
	'('            shift, and enter state 22
	'{'            shift, and enter state 23
	'Π'            shift, and enter state 24
	'●'            shift, and enter state 25
	'★'            shift, and enter state 26

	Qvar           goto state 13
	LType          goto state 14
	Atype          goto state 15
	Kind           goto state 16
	LKind          goto state 17

State 4


	var            shift, and enter state 11
	'_'            shift, and enter state 12

	Def            goto state 9
	Bvar           goto state 10

State 5


	'import'       shift, and enter state 8

	Imprt          goto state 6
	Imports        goto state 7

State 6

	Imports -> Imprt . Imports                          (rule 12)

	'import'       shift, and enter state 8
	'module'       reduce using rule 11

	Imprt          goto state 6
	Imports        goto state 133

State 7

	File -> Imports . 'module' Qvar MParams '.' Cmds LineNo    (rule 5)

	'module'       shift, and enter state 132


State 8

	Imprt -> 'import' . OptPublic Fpth OptAs MArgs '.'    (rule 6)

	var            reduce using rule 9
	qvar           reduce using rule 9
	fpth           reduce using rule 9
	'public'       shift, and enter state 131

	OptPublic      goto state 130

State 9

	%start_deftermtype -> Def .                         (rule 4)

	%eof           accept


State 10

	Def -> Bvar . MaybeCheckType '=' Term               (rule 36)
	Def -> Bvar . '◂' Kind '=' Type                     (rule 37)
	Def -> Bvar . ':' Kind '=' Type                     (rule 38)

	'='            reduce using rule 21
	':'            shift, and enter state 128
	'◂'            shift, and enter state 129

	MaybeCheckType goto state 127

State 11

	Bvar -> var .                                       (rule 80)

	var            reduce using rule 80
	'='            reduce using rule 80
	'_'            reduce using rule 80
	'.'            reduce using rule 80
	':'            reduce using rule 80
	'·'            reduce using rule 80
	'-'            reduce using rule 80
	'➔'            reduce using rule 80
	'◂'            reduce using rule 80


State 12

	Bvar -> '_' .                                       (rule 79)

	var            reduce using rule 79
	'='            reduce using rule 79
	'_'            reduce using rule 79
	'.'            reduce using rule 79
	':'            reduce using rule 79
	'·'            reduce using rule 79
	'-'            reduce using rule 79
	'➔'            reduce using rule 79
	'◂'            reduce using rule 79


State 13

	Atype -> Qvar .                                     (rule 149)

	var            reduce using rule 149
	qvar           reduce using rule 149
	'ε'            reduce using rule 149
	'ε-'           reduce using rule 149
	'εl'           reduce using rule 149
	'εl-'          reduce using rule 149
	'εr'           reduce using rule 149
	'εr-'          reduce using rule 149
	'^}'           reduce using rule 149
	'='            reduce using rule 149
	'>'            reduce using rule 149
	'.'            reduce using rule 149
	'('            reduce using rule 149
	')'            reduce using rule 149
	'['            reduce using rule 149
	']'            reduce using rule 149
	','            reduce using rule 149
	'{'            reduce using rule 149
	'}'            reduce using rule 149
	'β'            reduce using rule 149
	'·'            reduce using rule 149
	'-'            reduce using rule 149
	'ς'            reduce using rule 149
	'➾'            reduce using rule 149
	'➔'            reduce using rule 149
	'≃'            reduce using rule 149
	'@'            reduce using rule 149
	'●'            reduce using rule 149
	'μ'            reduce using rule 149
	'μP'           reduce using rule 149
	'|'            reduce using rule 149
	'&'            reduce using rule 149
	%eof           reduce using rule 149


State 14

	LType -> LType . '·' Atype                          (rule 145)
	LType -> LType . Lterm                              (rule 146)
	Kind -> LType . '➔' Kind                            (rule 154)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'('            shift, and enter state 47
	'['            shift, and enter state 77
	'β'            shift, and enter state 52
	'·'            shift, and enter state 78
	'ς'            shift, and enter state 53
	'➔'            shift, and enter state 126
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58

	Qvar           goto state 29
	Lterm          goto state 76
	Pterm          goto state 33

State 15

	LType -> Atype .                                    (rule 147)

	var            reduce using rule 147
	qvar           reduce using rule 147
	'ε'            reduce using rule 147
	'ε-'           reduce using rule 147
	'εl'           reduce using rule 147
	'εl-'          reduce using rule 147
	'εr'           reduce using rule 147
	'εr-'          reduce using rule 147
	'^}'           reduce using rule 147
	'='            reduce using rule 147
	'.'            reduce using rule 147
	'('            reduce using rule 147
	')'            reduce using rule 147
	'['            reduce using rule 147
	']'            reduce using rule 147
	'{'            reduce using rule 147
	'}'            reduce using rule 147
	'β'            reduce using rule 147
	'·'            reduce using rule 147
	'-'            reduce using rule 147
	'ς'            reduce using rule 147
	'➾'            reduce using rule 147
	'➔'            reduce using rule 147
	'●'            reduce using rule 147
	'μ'            reduce using rule 147
	'μP'           reduce using rule 147
	'|'            reduce using rule 147
	'&'            reduce using rule 147
	%eof           reduce using rule 147


State 16

	%start_kinde -> Kind .                              (rule 3)

	%eof           accept


State 17

	Kind -> LKind . '➔' Kind                            (rule 153)
	Kind -> LKind .                                     (rule 155)

	'='            reduce using rule 155
	'.'            reduce using rule 155
	')'            reduce using rule 155
	'➔'            shift, and enter state 125
	%eof           reduce using rule 155


State 18

	Qvar -> var .                                       (rule 81)

	var            reduce using rule 81
	qvar           reduce using rule 81
	'.num'         reduce using rule 81
	'ε'            reduce using rule 81
	'ε-'           reduce using rule 81
	'εl'           reduce using rule 81
	'εl-'          reduce using rule 81
	'εr'           reduce using rule 81
	'εr-'          reduce using rule 81
	'as'           reduce using rule 81
	'^}'           reduce using rule 81
	'='            reduce using rule 81
	'>'            reduce using rule 81
	'_'            reduce using rule 81
	'.'            reduce using rule 81
	'('            reduce using rule 81
	')'            reduce using rule 81
	'['            reduce using rule 81
	']'            reduce using rule 81
	','            reduce using rule 81
	'{'            reduce using rule 81
	'}'            reduce using rule 81
	'β'            reduce using rule 81
	'·'            reduce using rule 81
	'-'            reduce using rule 81
	'ς'            reduce using rule 81
	'➾'            reduce using rule 81
	'➔'            reduce using rule 81
	'≃'            reduce using rule 81
	'@'            reduce using rule 81
	'●'            reduce using rule 81
	'μ'            reduce using rule 81
	'μP'           reduce using rule 81
	'|'            reduce using rule 81
	'&'            reduce using rule 81
	%eof           reduce using rule 81


State 19

	Qvar -> qvar .                                      (rule 82)

	var            reduce using rule 82
	qvar           reduce using rule 82
	'.num'         reduce using rule 82
	'ε'            reduce using rule 82
	'ε-'           reduce using rule 82
	'εl'           reduce using rule 82
	'εl-'          reduce using rule 82
	'εr'           reduce using rule 82
	'εr-'          reduce using rule 82
	'as'           reduce using rule 82
	'^}'           reduce using rule 82
	'='            reduce using rule 82
	'>'            reduce using rule 82
	'_'            reduce using rule 82
	'.'            reduce using rule 82
	'('            reduce using rule 82
	')'            reduce using rule 82
	'['            reduce using rule 82
	']'            reduce using rule 82
	','            reduce using rule 82
	'{'            reduce using rule 82
	'}'            reduce using rule 82
	'β'            reduce using rule 82
	'·'            reduce using rule 82
	'-'            reduce using rule 82
	'ς'            reduce using rule 82
	'➾'            reduce using rule 82
	'➔'            reduce using rule 82
	'≃'            reduce using rule 82
	'@'            reduce using rule 82
	'●'            reduce using rule 82
	'μ'            reduce using rule 82
	'μP'           reduce using rule 82
	'|'            reduce using rule 82
	'&'            reduce using rule 82
	%eof           reduce using rule 82


State 20

	LKind -> kvar . KArgs                               (rule 159)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'='            reduce using rule 75
	'.'            reduce using rule 75
	'('            shift, and enter state 47
	')'            reduce using rule 75
	'['            shift, and enter state 77
	'β'            shift, and enter state 52
	'·'            shift, and enter state 123
	'ς'            shift, and enter state 53
	'➔'            reduce using rule 75
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58
	%eof           reduce using rule 75

	KArg           goto state 120
	KArgs          goto state 124
	Qvar           goto state 29
	Lterm          goto state 122
	Pterm          goto state 33

State 21

	LKind -> qkvar . KArgs                              (rule 158)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'='            reduce using rule 75
	'.'            reduce using rule 75
	'('            shift, and enter state 47
	')'            reduce using rule 75
	'['            shift, and enter state 77
	'β'            shift, and enter state 52
	'·'            shift, and enter state 123
	'ς'            shift, and enter state 53
	'➔'            reduce using rule 75
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58
	%eof           reduce using rule 75

	KArg           goto state 120
	KArgs          goto state 121
	Qvar           goto state 29
	Lterm          goto state 122
	Pterm          goto state 33

State 22

	Atype -> '(' . Type ')'                             (rule 148)
	LKind -> '(' . Kind ')'                             (rule 157)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	kvar           shift, and enter state 20
	qkvar          shift, and enter state 21
	'{^'           shift, and enter state 61
	'('            shift, and enter state 22
	'['            shift, and enter state 63
	'{'            shift, and enter state 23
	'Π'            shift, and enter state 119
	'∀'            shift, and enter state 65
	'λ'            shift, and enter state 66
	'ι'            shift, and enter state 67
	'●'            shift, and enter state 25
	'★'            shift, and enter state 26

	Qvar           goto state 13
	Type           goto state 74
	LType          goto state 117
	Atype          goto state 15
	Kind           goto state 118
	LKind          goto state 17

State 23

	Atype -> '{' . Term '≃' Term '}'                    (rule 151)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'open'         shift, and enter state 40
	'close'        shift, and enter state 41
	'θ'            shift, and enter state 42
	'θ+'           shift, and enter state 43
	'θ<'           shift, and enter state 44
	'ρ'            shift, and enter state 45
	'δ'            shift, and enter state 46
	'('            shift, and enter state 47
	'['            shift, and enter state 48
	'{'            shift, and enter state 49
	'λ'            shift, and enter state 50
	'Λ'            shift, and enter state 51
	'β'            shift, and enter state 52
	'ς'            shift, and enter state 53
	'χ'            shift, and enter state 54
	'φ'            shift, and enter state 55
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58

	Lam            goto state 27
	Theta          goto state 28
	Qvar           goto state 29
	Term           goto state 116
	Aterm          goto state 31
	Lterm          goto state 32
	Pterm          goto state 33

State 24

	Kind -> 'Π' . Bvar ':' TpKd '.' Kind                (rule 152)

	var            shift, and enter state 11
	'_'            shift, and enter state 12

	Bvar           goto state 115

State 25

	Atype -> '●' .                                      (rule 150)

	var            reduce using rule 150
	qvar           reduce using rule 150
	'ε'            reduce using rule 150
	'ε-'           reduce using rule 150
	'εl'           reduce using rule 150
	'εl-'          reduce using rule 150
	'εr'           reduce using rule 150
	'εr-'          reduce using rule 150
	'^}'           reduce using rule 150
	'='            reduce using rule 150
	'>'            reduce using rule 150
	'.'            reduce using rule 150
	'('            reduce using rule 150
	')'            reduce using rule 150
	'['            reduce using rule 150
	']'            reduce using rule 150
	','            reduce using rule 150
	'{'            reduce using rule 150
	'}'            reduce using rule 150
	'β'            reduce using rule 150
	'·'            reduce using rule 150
	'-'            reduce using rule 150
	'ς'            reduce using rule 150
	'➾'            reduce using rule 150
	'➔'            reduce using rule 150
	'≃'            reduce using rule 150
	'@'            reduce using rule 150
	'●'            reduce using rule 150
	'μ'            reduce using rule 150
	'μP'           reduce using rule 150
	'|'            reduce using rule 150
	'&'            reduce using rule 150
	%eof           reduce using rule 150


State 26

	LKind -> '★' .                                      (rule 156)

	'='            reduce using rule 156
	'.'            reduce using rule 156
	')'            reduce using rule 156
	'➔'            reduce using rule 156
	%eof           reduce using rule 156


State 27

	Term -> Lam . Bvar OptClass '.' Term                (rule 87)

	var            shift, and enter state 11
	'_'            shift, and enter state 12

	Bvar           goto state 114

State 28

	Term -> Theta . Lterm Lterms                        (rule 96)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'('            shift, and enter state 47
	'['            shift, and enter state 77
	'β'            shift, and enter state 52
	'ς'            shift, and enter state 53
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58

	Qvar           goto state 29
	Lterm          goto state 113
	Pterm          goto state 33

State 29

	Pterm -> Qvar .                                     (rule 123)

	var            reduce using rule 123
	qvar           reduce using rule 123
	'.num'         reduce using rule 123
	'ε'            reduce using rule 123
	'ε-'           reduce using rule 123
	'εl'           reduce using rule 123
	'εl-'          reduce using rule 123
	'εr'           reduce using rule 123
	'εr-'          reduce using rule 123
	'^}'           reduce using rule 123
	'='            reduce using rule 123
	'>'            reduce using rule 123
	'.'            reduce using rule 123
	'('            reduce using rule 123
	')'            reduce using rule 123
	'['            reduce using rule 123
	']'            reduce using rule 123
	','            reduce using rule 123
	'{'            reduce using rule 123
	'}'            reduce using rule 123
	'β'            reduce using rule 123
	'·'            reduce using rule 123
	'-'            reduce using rule 123
	'ς'            reduce using rule 123
	'➾'            reduce using rule 123
	'➔'            reduce using rule 123
	'≃'            reduce using rule 123
	'@'            reduce using rule 123
	'●'            reduce using rule 123
	'μ'            reduce using rule 123
	'μP'           reduce using rule 123
	'|'            reduce using rule 123
	'&'            reduce using rule 123
	%eof           reduce using rule 123


State 30

	%start_terme -> Term .                              (rule 2)

	%eof           accept


State 31

	Term -> Aterm .                                     (rule 97)
	Aterm -> Aterm . Lterm                              (rule 110)
	Aterm -> Aterm . '-' Lterm                          (rule 111)
	Aterm -> Aterm . '·' Atype                          (rule 112)

	var            shift, and enter state 18
	qvar           shift, and enter state 19
	'ε'            shift, and enter state 34
	'ε-'           shift, and enter state 35
	'εl'           shift, and enter state 36
	'εl-'          shift, and enter state 37
	'εr'           shift, and enter state 38
	'εr-'          shift, and enter state 39
	'>'            reduce using rule 97
	'.'            reduce using rule 97
	'('            shift, and enter state 47
	')'            reduce using rule 97
	'['            shift, and enter state 77
	']'            reduce using rule 97
	','            reduce using rule 97
	'{'            reduce using rule 97
	'}'            reduce using rule 97
	'β'            shift, and enter state 52
	'·'            shift, and enter state 111
	'-'            shift, and enter state 112
	'ς'            shift, and enter state 53
	'≃'            reduce using rule 97
	'@'            reduce using rule 97
	'●'            shift, and enter state 56
	'μ'            shift, and enter state 57
	'μP'           shift, and enter state 58
	'|'            reduce using rule 97
	%eof           reduce using rule 97

	Qvar           goto state 29
	Lterm          goto state 110
	Pterm          goto state 33

State 32

	Aterm -> Lterm .                                    (rule 113)

	var            reduce using rule 113
	qvar           reduce using rule 113
	'ε'            reduce using rule 113
	'ε-'           reduce using rule 113
	'εl'           reduce using rule 113
	'εl-'          reduce using rule 113
	'εr'           reduce using rule 113
	'εr-'          reduce using rule 113
	'>'            reduce using rule 113
	'.'            reduce using rule 113
	'('            reduce using rule 113
	')'            reduce using rule 113
	'['            reduce using rule 113
	']'            reduce using rule 113
	','            reduce using rule 113
	'{'            reduce using rule 113
	'}'            reduce using rule 113
	'β'            reduce using rule 113
	'·'            reduce using rule 113
	'-'            reduce using rule 113
	'ς'            reduce using rule 113
	'≃'            reduce using rule 113
	'@'            reduce using rule 113
	'●'            reduce using rule 113
	'μ'            reduce using rule 113
	'μP'           reduce using rule 113
	'|'            reduce using rule 113
	%eof           reduce using rule 113


State 33

	Lterm -> Pterm .                                    (rule 122)
	Pterm -> Pterm . '.num'                             (rule 125)
